Update README for test configuration arguments to enable reflection.